[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Objects/Coin.gd" type="Script" id=1]
[ext_resource path="res://assets/Coin2.png" type="Texture" id=2]
[ext_resource path="res://assets/coin.wav" type="AudioStream" id=3]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -0.179192, -34.5879, 13.9728, -31.4813, 26.0539, -22.1617, 32, -11.8665, 34.5106, 1.13745, 30.3685, 15.8073, 20.1859, 27.1979, 11.9018, 32.0304, 0.511131, 34.6192, -10.8796, 32.8933, -23.4783, 26.5076, -32.4528, 14.5992, -34.2071, 0.156757, -33.1432, -11.6339, -27.2752, -22.1617, -13.9861, -31.4813 )

[sub_resource type="CircleShape2D" id=2]
radius = 33.0

[sub_resource type="Animation" id=3]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 0.554785, 1.93187 ),
"update": 0,
"values": [ Vector2( 0, -7 ), Vector2( 0, 7 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.297302, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -81 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 25.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 60.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 25.0
angle_random = 0.5
scale = 3.0
scale_random = 0.3
color = Color( 0.933333, 0.945098, 0.423529, 1 )

[node name="Coin" type="Area2D"]
monitorable = false
collision_layer = 8
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.737108, -0.609538 )
scale = Vector2( 0.136797, 0.136797 )
texture = ExtResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite"]
position = Vector2( 0, -0.133541 )
scale = Vector2( 8, 8 )
occluder = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "bouncing"
anims/bouncing = SubResource( 3 )
anims/picked = SubResource( 4 )

[node name="CoinDust" type="Particles2D" parent="."]
rotation = -1.5708
emitting = false
amount = 18
one_shot = true
speed_scale = 5.0
explosiveness = 0.62
randomness = 0.18
process_material = SubResource( 5 )

[node name="CoinGet" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
attenuation = 0.535887
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
